layout/base/nsRefreshDriver.cpp
@@ -1720,6 +1720,11 @@ void nsRefreshDriver::RunFrameRequestCallbacks(TimeStamp aNowTime) {
         CallbackDebuggerNotificationGuard guard(
             global, DebuggerNotificationType::RequestAnimationFrameCallback);
 
+        // 0 is an inappropriate mixin for this this area; however CSS Animations
+        // needs to have it's Time Reduction Logic refactored, so it's currently
+        // only clamping for RFP mode. RFP mode gives a much lower time precision,
+        // so we accept the security leak here for now
+        timeStamp = nsRFPService::ReduceTimePrecisionAsMSecs(timeStamp, 0, TimerPrecisionType::RFPOnly);
         // MOZ_KnownLive is OK, because the stack array frameRequestCallbacks
         // keeps callback alive and the mCallback strong reference can't be
         // mutated by the call.
